--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,6 +52,7 @@
     "react/jsx-curly-newline": "off",
     "react/jsx-props-no-spreading": "off",
     "react/function-component-definition": "off",
+    "eslint-disable-next-line prettier/prettier": "off",
     "quotes": "off",
     "object-curly-spacing": 1,
     "array-bracket-spacing": 1,
